// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleProvider switch locale 1`] = `
<div
  class="noeditor-wrap"
>
  <form
    class="demo-wrap"
  >
    <div
      class="style__ItemWrap-bJHrdv gRAdqA style__RowWrap-bUjzaZ grtDOl"
    >
      <div
        class="style__LabelWrap-bLyOai dUZlBq style__ColWrap-ekoOlv ieheTU"
        span="3"
      >
        locale
      </div>
      <div
        class="style__ColWrap-ekoOlv jDloly"
        span="9"
      >
        <div
          class="style__RadioGroupWrap-kYstpi fQmWIP"
        >
          <button
            class="style__RadioButtonWrap-sjeVo jwTJAB style__ButtonWrap-bFwXOZ eAweBM"
            type="button"
          >
            zh_CN
          </button>
          <button
            class="style__RadioButtonWrap-sjeVo fnBURL style__ButtonWrap-bFwXOZ eAweBM"
            type="button"
          >
            en_US
          </button>
        </div>
      </div>
    </div>
  </form>
  <div>
    <div>
      <div
        class="demo-wrap"
      >
        <ul
          class="uc-fe-pagination uc-fe-pagination-md style__PaginationWrap-hputKY eTmqsJ"
          unselectable="unselectable"
        >
          <li
            aria-disabled="true"
            class="uc-fe-pagination-disabled uc-fe-pagination-prev"
            title="上一页"
          >
            <i
              class="icon__left uc-fe-pagination-prev-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a>
              1
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-2"
            tabindex="0"
            title="2"
          >
            <a>
              2
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-3"
            tabindex="0"
            title="3"
          >
            <a>
              3
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-4"
            tabindex="0"
            title="4"
          >
            <a>
              4
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
            tabindex="0"
            title="5"
          >
            <a>
              5
            </a>
          </li>
          <li
            class="uc-fe-pagination-jump-next"
            tabindex="0"
            title="向后 5 页"
          >
            <i
              class="icon__more-three uc-fe-pagination-jump-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-10"
            tabindex="0"
            title="10"
          >
            <a>
              10
            </a>
          </li>
          <li
            aria-disabled="false"
            class=" uc-fe-pagination-next"
            tabindex="0"
            title="下一页"
          >
            <i
              class="icon__right uc-fe-pagination-next-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-options"
          >
            <div
              class="uc-fe-pagination-options-size-changer style__SelectWrap-bWGNmq dhWoCM"
              placeholder="请选择"
            >
              <div>
                <div
                  class="style__Selector-yLDfU dTQlTa"
                >
                  <div>
                    10 条/页
                  </div>
                  <i
                    class="icon__down style__Arrow-bfHBbq kksxDZ style__IconWrap-hmdRqY gdfCrX"
                  />
                </div>
              </div>
              <div
                style="position: absolute; top: 0px; left: 0px; width: 100%;"
              >
                <div>
                  <div
                    class="uc-fe-popover style__PopoverWrap-cfqvNq iMAKfT uc-fe-popover-placement-bottomLeft  uc-fe-popover-hidden"
                  >
                    <div
                      class="style__MenuWrap-jpnfrZ cKJYyd"
                    >
                      <div
                        class="style__BlockMenu-liNvdg lixBuV style__MenuWrap-dFhmNC fQaGUo"
                      >
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn hjwPg"
                        >
                          10 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          20 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          30 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          40 条/页
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="uc-fe-pagination-options-quick-jumper"
            >
              <div
                class="style__NumberInputWrap-cGKKuW veiBm"
              >
                <div
                  class="style__InputWrap-fzLmJu fPsDRG"
                >
                  <input
                    autocomplete="off"
                    class="style__Input-dtDjMm esRyZC"
                    max="10"
                    min="1"
                    step="1"
                    value=""
                  />
                  <span
                    class="style__InputSuffix-gVIVlX gqOpzu"
                  >
                    <span
                      class="uc-fe-pagination-options-quick-jumper-text"
                    >
                      /10
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="uc-fe-pagination-options-gobutton style__ButtonWrap-bFwXOZ bpqGRh"
                type="button"
              >
                确定
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="demo-wrap"
      >
        <div
          class="uc-fe-calendar style__CalendarWrap-jcaBJg llIZHO"
          tabindex="0"
        >
          <div
            class="uc-fe-calendar-panel"
          >
            <div
              class="uc-fe-calendar-date-panel"
            >
              <div
                class="uc-fe-calendar-header"
              >
                <div
                  style="position: relative;"
                >
                  <a
                    class="uc-fe-calendar-prev-year-btn"
                    role="button"
                    title="上一年 (Control键加左方向键)"
                  />
                  <a
                    class="uc-fe-calendar-prev-month-btn"
                    role="button"
                    title="上个月 (翻页上键)"
                  />
                  <span
                    class="uc-fe-calendar-ym-select"
                  >
                    <a
                      class="uc-fe-calendar-year-select"
                      role="button"
                      title="选择年份"
                    >
                      2018年
                    </a>
                    <a
                      class="uc-fe-calendar-month-select"
                      role="button"
                      title="选择月份"
                    >
                      7月
                    </a>
                  </span>
                  <a
                    class="uc-fe-calendar-next-month-btn"
                    title="下个月 (翻页下键)"
                  />
                  <a
                    class="uc-fe-calendar-next-year-btn"
                    title="下一年 (Control键加右方向键)"
                  />
                </div>
              </div>
              <div
                class="uc-fe-calendar-body"
              >
                <table
                  cellspacing="0"
                  class="uc-fe-calendar-table"
                  role="grid"
                >
                  <thead>
                    <tr
                      role="row"
                    >
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周一"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          一
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周二"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          二
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周三"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          三
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周四"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          四
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周五"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          五
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周六"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          六
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="周日"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          日
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="uc-fe-calendar-tbody"
                  >
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell"
                        role="gridcell"
                        title="2018年6月25日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell"
                        role="gridcell"
                        title="2018年6月26日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell"
                        role="gridcell"
                        title="2018年6月27日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell"
                        role="gridcell"
                        title="2018年6月28日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell"
                        role="gridcell"
                        title="2018年6月29日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-month-cell uc-fe-calendar-last-day-of-month"
                        role="gridcell"
                        title="2018年6月30日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月1日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          1
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月2日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月3日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月4日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月5日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月6日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月7日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          7
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月8日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          8
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月9日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          9
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月10日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月11日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          11
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月12日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          12
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月13日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          13
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月14日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          14
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月15日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          15
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="uc-fe-calendar-current-week uc-fe-calendar-active-week"
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月16日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          16
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月17日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          17
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月18日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          18
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月19日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          19
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月20日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          20
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-today uc-fe-calendar-selected-day"
                        role="gridcell"
                        title="2018年7月21日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="true"
                          class="uc-fe-calendar-date"
                        >
                          21
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月22日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          22
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月23日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          23
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月24日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          24
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月25日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月26日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月27日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月28日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月29日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          29
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="2018年7月30日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-day-of-month"
                        role="gridcell"
                        title="2018年7月31日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="2018年8月1日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="2018年8月2日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="2018年8月3日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="2018年8月4日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="2018年8月5日"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          5
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LocaleProvider switch locale 2`] = `
<div
  class="noeditor-wrap"
>
  <form
    class="demo-wrap"
  >
    <div
      class="style__ItemWrap-bJHrdv gRAdqA style__RowWrap-bUjzaZ grtDOl"
    >
      <div
        class="style__LabelWrap-bLyOai dUZlBq style__ColWrap-ekoOlv ieheTU"
        span="3"
      >
        locale
      </div>
      <div
        class="style__ColWrap-ekoOlv jDloly"
        span="9"
      >
        <div
          class="style__RadioGroupWrap-kYstpi fQmWIP"
        >
          <button
            class="style__RadioButtonWrap-sjeVo fnBURL style__ButtonWrap-bFwXOZ eAweBM"
            type="button"
          >
            zh_CN
          </button>
          <button
            class="style__RadioButtonWrap-sjeVo jwTJAB style__ButtonWrap-bFwXOZ eAweBM"
            type="button"
          >
            en_US
          </button>
        </div>
      </div>
    </div>
  </form>
  <div>
    <div>
      <div
        class="demo-wrap"
      >
        <ul
          class="uc-fe-pagination uc-fe-pagination-md style__PaginationWrap-hputKY eTmqsJ"
          unselectable="unselectable"
        >
          <li
            aria-disabled="true"
            class="uc-fe-pagination-disabled uc-fe-pagination-prev"
            title="prev page"
          >
            <i
              class="icon__left uc-fe-pagination-prev-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a>
              1
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-2"
            tabindex="0"
            title="2"
          >
            <a>
              2
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-3"
            tabindex="0"
            title="3"
          >
            <a>
              3
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-4"
            tabindex="0"
            title="4"
          >
            <a>
              4
            </a>
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
            tabindex="0"
            title="5"
          >
            <a>
              5
            </a>
          </li>
          <li
            class="uc-fe-pagination-jump-next"
            tabindex="0"
            title="next 5 page"
          >
            <i
              class="icon__more-three uc-fe-pagination-jump-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-item uc-fe-pagination-item-10"
            tabindex="0"
            title="10"
          >
            <a>
              10
            </a>
          </li>
          <li
            aria-disabled="false"
            class=" uc-fe-pagination-next"
            tabindex="0"
            title="next page"
          >
            <i
              class="icon__right uc-fe-pagination-next-icon style__IconWrap-hmdRqY gdfCrX"
            />
          </li>
          <li
            class="uc-fe-pagination-options"
          >
            <div
              class="uc-fe-pagination-options-size-changer style__SelectWrap-bWGNmq dhWoCM"
              placeholder="请选择"
            >
              <div>
                <div
                  class="style__Selector-yLDfU dTQlTa"
                >
                  <div>
                    10 items/page
                  </div>
                  <i
                    class="icon__down style__Arrow-bfHBbq kksxDZ style__IconWrap-hmdRqY gdfCrX"
                  />
                </div>
              </div>
              <div
                style="position: absolute; top: 0px; left: 0px; width: 100%;"
              >
                <div>
                  <div
                    class="uc-fe-popover style__PopoverWrap-cfqvNq iMAKfT uc-fe-popover-placement-bottomLeft  uc-fe-popover-hidden"
                  >
                    <div
                      class="style__MenuWrap-jpnfrZ cKJYyd"
                    >
                      <div
                        class="style__BlockMenu-liNvdg lixBuV style__MenuWrap-dFhmNC fQaGUo"
                      >
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn hjwPg"
                        >
                          10 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          20 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          30 条/页
                        </div>
                        <div
                          class="style__OptionWrap-JXPIM gfNlpC style__ItemWrap-evqZGn gcOQbP"
                        >
                          40 条/页
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="uc-fe-pagination-options-quick-jumper"
            >
              <div
                class="style__NumberInputWrap-cGKKuW veiBm"
              >
                <div
                  class="style__InputWrap-fzLmJu fPsDRG"
                >
                  <input
                    autocomplete="off"
                    class="style__Input-dtDjMm esRyZC"
                    max="10"
                    min="1"
                    step="1"
                    value=""
                  />
                  <span
                    class="style__InputSuffix-gVIVlX gqOpzu"
                  >
                    <span
                      class="uc-fe-pagination-options-quick-jumper-text"
                    >
                      /10
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="uc-fe-pagination-options-gobutton style__ButtonWrap-bFwXOZ bpqGRh"
                type="button"
              >
                confirm
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="demo-wrap"
      >
        <div
          class="uc-fe-calendar style__CalendarWrap-jcaBJg llIZHO"
          tabindex="0"
        >
          <div
            class="uc-fe-calendar-panel"
          >
            <div
              class="uc-fe-calendar-date-panel"
            >
              <div
                class="uc-fe-calendar-header"
              >
                <div
                  style="position: relative;"
                >
                  <a
                    class="uc-fe-calendar-prev-year-btn"
                    role="button"
                    title="Last year (Control + left)"
                  />
                  <a
                    class="uc-fe-calendar-prev-month-btn"
                    role="button"
                    title="Previous month (PageUp)"
                  />
                  <span
                    class="uc-fe-calendar-my-select"
                  >
                    <a
                      class="uc-fe-calendar-month-select"
                      role="button"
                      title="Choose a month"
                    >
                      Jul
                    </a>
                    <a
                      class="uc-fe-calendar-year-select"
                      role="button"
                      title="Choose a year"
                    >
                      2018
                    </a>
                  </span>
                  <a
                    class="uc-fe-calendar-next-month-btn"
                    title="Next month (PageDown)"
                  />
                  <a
                    class="uc-fe-calendar-next-year-btn"
                    title="Next year (Control + right)"
                  />
                </div>
              </div>
              <div
                class="uc-fe-calendar-body"
              >
                <table
                  cellspacing="0"
                  class="uc-fe-calendar-table"
                  role="grid"
                >
                  <thead>
                    <tr
                      role="row"
                    >
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Sun"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Su
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Mon"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Mo
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Tue"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Tu
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Wed"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          We
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Thu"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Th
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Fri"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Fr
                        </span>
                      </th>
                      <th
                        class="uc-fe-calendar-column-header"
                        role="columnheader"
                        title="Sat"
                      >
                        <span
                          class="uc-fe-calendar-column-header-inner"
                        >
                          Sa
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="uc-fe-calendar-tbody"
                  >
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 1, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 2, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 3, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 4, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 5, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 6, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 7, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          7
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 8, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          8
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 9, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          9
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 10, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 11, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          11
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 12, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          12
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 13, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          13
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 14, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          14
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="uc-fe-calendar-current-week uc-fe-calendar-active-week"
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 15, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          15
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 16, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          16
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 17, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          17
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 18, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          18
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 19, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          19
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 20, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          20
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-today uc-fe-calendar-selected-day"
                        role="gridcell"
                        title="July 21, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="true"
                          class="uc-fe-calendar-date"
                        >
                          21
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 22, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          22
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 23, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          23
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 24, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          24
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 25, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 26, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 27, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 28, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          28
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 29, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell"
                        role="gridcell"
                        title="July 30, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-last-day-of-month"
                        role="gridcell"
                        title="July 31, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 1, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 2, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 3, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 4, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          4
                        </div>
                      </td>
                    </tr>
                    <tr
                      class=""
                      role="row"
                    >
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 5, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 6, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 7, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          7
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 8, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          8
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 9, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          9
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 10, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="uc-fe-calendar-cell uc-fe-calendar-next-month-btn-day"
                        role="gridcell"
                        title="August 11, 2018"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="uc-fe-calendar-date"
                        >
                          11
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
